IGNITE-22077 Fix surefire plugin.