@@ -203,9 +203,11 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
+                            <forkCount>1</forkCount>
                             <argLine>
                                 --add-opens=java.base/jdk.internal.access=ALL-UNNAMED
                                 --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+                                --add-opens java.base/jdk.internal.ref=ALL-UNNAMED
                                 --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
                                 --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
                                 --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
@@ -223,6 +225,7 @@
                                 --add-opens=java.base/java.time=ALL-UNNAMED
                                 --add-opens=java.base/sun.security.ssl=ALL-UNNAMED
                                 --add-opens=java.base/sun.security.x509=ALL-UNNAMED
+                                --add-opens java.base/sun.net.util=ALL-UNNAMED
                                 --add-opens=java.sql/java.sql=ALL-UNNAMED
                                 --add-opens java.base/java.nio=ALL-UNNAMED
                             </argLine>
